Fix Align

--- a/assets/scss/goal.scss
+++ b/assets/scss/goal.scss
@@ -17,6 +17,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 .goalNow{
     position: relative;
